WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251896
Navigation within iframe doesn't exit fullscreen for parent iframe element
https://bugs.webkit.org/show_bug.cgi?id=251896
Summary
Navigation within iframe doesn't exit fullscreen for parent iframe element
Tim Nguyen (:ntim)
Reported
2023-02-07 17:23:07 PST
rdar://104393093
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2023-02-07 17:31:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9790
EWS
Comment 2
2023-02-08 11:55:20 PST
Committed
260024@main
(9215d7d582cb): <
https://commits.webkit.org/260024@main
> Reviewed commits have been landed. Closing PR #9790 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug