Cherry-pick 9215d7d582cb. rdar://problem/104393093

Navigation within iframe doesn't exit fullscreen for parent iframe element
    https://bugs.webkit.org/show_bug.cgi?id=251896
    rdar://104393093

    Reviewed by Chris Dumez.

    This was because the exiting document was already detached from the Frame object, causing it to fail to find the top document.
    To fix this, we store the top document when initializing FullscreenManager.

    * LayoutTests/fullscreen/fullscreen-iframe-navigation-expected.html: Added.
    * LayoutTests/fullscreen/fullscreen-iframe-navigation.html: Added.
    * LayoutTests/fullscreen/resources/fullscreen-iframe-navigation-target.html: Added.
    * LayoutTests/platform/mac-wk1/TestExpectations:
    * Source/WebCore/dom/FullscreenManager.cpp:
    (WebCore::FullscreenManager::cancelFullscreen):
    (WebCore::documentsToUnfullscreen):
    (WebCore::FullscreenManager::exitFullscreen):
    (WebCore::FullscreenManager::finishExitFullscreen):
    (WebCore::FullscreenManager::didExitFullscreen):
    * Source/WebCore/dom/FullscreenManager.h:

    Canonical link: https://commits.webkit.org/260024@main

Canonical link: https://commits.webkit.org/259548.144@safari-7615-branch